@@ -28,6 +28,7 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyVetoException;
 import java.beans.VetoableChangeListener;
+import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -67,6 +68,8 @@ import javax.swing.border.Border;
 import javax.swing.border.CompoundBorder;
 import javax.swing.border.LineBorder;
 import javax.swing.event.ListSelectionEvent;
+
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import jmri.BlockManager;
 import jmri.ConfigureManager;
 import jmri.InstanceManager;
@@ -100,17 +103,17 @@ import org.slf4j.LoggerFactory;
  * attributes of the Positionable objects is done here. However, control of
  * mouse events is passed to the editor views, so control is also done by the
  * editor views.
- * <P>
+ * <p>
  * The "contents" List keeps track of all the objects added to the target frame
  * for later manipulation. This class only locates and moves "target panel"
  * items, and does not control their appearance - that is left for the editor
  * views.
- * <P>
+ * <p>
  * The Editor has tri-state "flags" to control the display of Positionable
  * object attributes globally - i.e. "on" or "off" for all - or as a third
  * state, permits the display control "locally" by corresponding flags in each
  * Positionable object
- * <P>
+ * <p>
  * The title of the target and the editor panel are kept consistent via the
  * {#setTitle} method.
  * <p>
@@ -220,7 +223,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     // map of icon editor frames (incl, icon editor) keyed by name
     protected HashMap<String, JFrameItem> _iconEditorFrame = new HashMap<>();
 
-    private static volatile ArrayList<Editor> editors = new ArrayList<>();
     // store panelMenu state so preference is retained on headless systems
     private boolean panelMenuIsVisible = true;
 
@@ -238,7 +240,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         InstanceManager.sensorManagerInstance().addVetoableChangeListener(this);
         InstanceManager.memoryManagerInstance().addVetoableChangeListener(this);
         InstanceManager.getDefault(BlockManager.class).addVetoableChangeListener(this);
-        editors.add(this);
+        InstanceManager.getDefault(EditorManager.class).addEditor(this);
     }
 
     public Editor(String name) {
@@ -264,6 +266,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     public NamedIcon loadFailed(String msg, String url) {
         log.debug("loadFailed _ignore= {} {}", _ignore, msg);
+        if (_urlMap == null) {
+            _urlMap = new HashMap<>();
+        }
         String goodUrl = _urlMap.get(url);
         if (goodUrl != null) {
             return NamedIcon.getIconByName(goodUrl);
@@ -286,7 +291,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return _newIcon;
     }
 
-    class UrlErrorDialog extends JDialog {
+    public class UrlErrorDialog extends JDialog {
 
         JTextField _urlField;
         CatalogPanel _catalog;
@@ -466,19 +471,27 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     }
 
     public Color getBackgroundColor() {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        return tmp.getBackgroundColor();
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            return tmp.getBackgroundColor();
+        } else {
+            return null;
+        }
     }
 
     public void setBackgroundColor(Color col) {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        tmp.setBackgroundColor(col);
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            tmp.setBackgroundColor(col);
+        }
         JmriColorChooser.addRecentColor(col);
     }
 
     public void clearBackgroundColor() {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        tmp.clearBackgroundColor();
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            tmp.clearBackgroundColor();
+        }
     }
 
     /**
@@ -650,9 +663,15 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 g2d.scale(_paintScale, _paintScale);
             }
 
-            super.paint(g);
-            paintTargetPanel(g);
-
+            // It is rather unpleasant that the following needs to be done in a try-catch, but exceptions have been observed
+            try {
+               super.paint(g);
+               paintTargetPanel(g);
+            } catch (Exception e) {
+                log.error("paint failed in thread "+
+                    Thread.currentThread().getName()+" "+Thread.currentThread().getId()+": ", e);
+            }
+            
             Stroke stroke = new BasicStroke();
             if (g2d != null) {
                 stroke = g2d.getStroke();
@@ -928,18 +947,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      return _showCoordinates;
      }
      */
-    /**
-     * Control whether target panel shows a menu
-     *
-     * @param state true for controlling.
-     * @deprecated 3.9.5
-     * @see #setPanelMenuVisible(boolean)
-     */
-    @Deprecated
-    public void setPanelMenu(boolean state) {
-        _targetFrame.getJMenuBar().setVisible(state);
-        validate();
-    }
 
     /**
      * Hide or show menus on the target panel.
@@ -1053,8 +1060,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 message = Bundle.getMessage("PanelCloseQuestion") + "\n"
                         + Bundle.getMessage("PanelCloseHelp");
             }
-            if (_targetPanel.getTopLevelAncestor() != null) {
-                name = ((JFrame) _targetPanel.getTopLevelAncestor()).getTitle();
+            Container ancestor = _targetPanel.getTopLevelAncestor();
+            if (ancestor instanceof JFrame) {
+                name = ((JFrame) ancestor).getTitle();
             }
             if (!InstanceManager.getDefault(ShutDownManager.class).isShuttingDown()) {
                 int selectedValue = JOptionPane.showOptionDialog(_targetPanel,
@@ -1096,7 +1104,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         JFrame frame = getTargetFrame();
 
         try {
-            Editor ed = (Editor) Class.forName(className).newInstance();
+            Editor ed = (Editor) Class.forName(className).getDeclaredConstructor().newInstance();
 
             ed.setName(getName());
             ed.init(getName());
@@ -1128,12 +1136,8 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             InstanceManager.getDefault(PanelMenu.class).addEditorPanel(ed);
             dispose();
             return ed;
-        } catch (ClassNotFoundException cnfe) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException cnfe) {
             log.error("changeView exception {}", cnfe.toString());
-        } catch (InstantiationException ie) {
-            log.error("changeView exception {}", ie.toString());
-        } catch (IllegalAccessException iae) {
-            log.error("changeView exception {}", iae.toString());
         }
         return null;
     }
@@ -2215,6 +2219,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return result;
     }
 
+    @SuppressFBWarnings(value="BC_UNCONFIRMED_CAST_OF_RETURN_VALUE", justification="iconEditor requested as exact type")
     SlipTurnoutIcon addSlip() {
         SlipTurnoutIcon result = new SlipTurnoutIcon(this);
         SlipIconAdder editor = (SlipIconAdder) getIconEditor("SlipTOEditor");
@@ -2409,6 +2414,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return result;
     }
 
+    @SuppressFBWarnings(value="BC_UNCONFIRMED_CAST_OF_RETURN_VALUE", justification="iconEditor requested as exact type")
     public MultiSensorIcon addMultiSensor() {
         MultiSensorIcon result = new MultiSensorIcon(this);
         MultiSensorIconAdder editor = (MultiSensorIconAdder) getIconEditor("MultiSensor");
@@ -2475,8 +2481,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     public void setTitle() {
         String name = "";
-        if (_targetPanel.getTopLevelAncestor() != null) {
-            name = ((JFrame) _targetPanel.getTopLevelAncestor()).getTitle();
+        Container ancestor = _targetPanel.getTopLevelAncestor();
+        if (ancestor instanceof JFrame) {
+            name = ((JFrame) ancestor).getTitle();
         }
         if (name == null || name.equals("")) {
             super.setTitle(Bundle.getMessage("LabelEditor"));
@@ -2650,9 +2657,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      *              for future use
      * @deprecated since 4.11.5. use {@link #dispose()} instead.
      */
-    @Deprecated
+    @Deprecated // 4.11.5
     public void dispose(boolean clear) {
         log.debug("Editor delete and dispose done. clear= {}", clear);
+        jmri.util.Log4JUtil.deprecationWarning(log, "dispose(boolean )");        
         dispose();
     }
 
@@ -2673,7 +2681,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             cm.deregister(this);
         }
         InstanceManager.getDefault(PanelMenu.class).deletePanel(this);
-        Editor.editors.remove(this);
+        InstanceManager.getDefault(EditorManager.class).removeEditor(this);
         setVisible(false);
         _contents.clear();
         removeAll();
@@ -2686,8 +2694,8 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     public void showToolTip(Positionable selection, MouseEvent event) {
         ToolTip tip = selection.getToolTip();
         String txt = tip.getText();
-        if (txt == null) {
-            tip.setText(selection.getNameString());
+        if (txt == null || txt.isEmpty()) {
+            return;
         }
         tip.setLocation(selection.getX() + selection.getWidth() / 2, selection.getY() + selection.getHeight());
         setToolTip(tip);
@@ -3347,11 +3355,14 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * Get a List of the currently-existing Editor objects. The returned list is
      * a copy made at the time of the call, so it can be manipulated as needed
      * by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList()}
      *
      * @return a List of Editors
+     * @see jmri.jmrit.display.EditorManager#getEditorsList()
      */
     synchronized public static List<Editor> getEditors() {
-        return new ArrayList<>(editors);
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList();
     }
 
     /**
@@ -3360,36 +3371,30 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * <p>
      * The returned list is a copy made at the time of the call, so it can be
      * manipulated as needed by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList(Class)}
      *
      * @param <T>  the Class the list should be limited to.
      * @param type the Class the list should be limited to.
      * @return a List of Editors.
+     * @see jmri.jmrit.display.EditorManager#getEditorsList(Class)
      */
-    @SuppressWarnings("unchecked")
     synchronized public static <T extends Editor> List<T> getEditors(@Nonnull Class<T> type) {
-        List<T> result = new ArrayList<>();
-        for (Editor e : Editor.getEditors()) {
-            if (type.isInstance(e)) {
-                result.add((T) e);
-            }
-        }
-        return result;
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList(type);
     }
 
     /**
      * Get an Editor of a particular name. If more than one exists, there's no
      * guarantee as to which is returned.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditor(String)}
      *
      * @param name the editor to get
      * @return an Editor or null if no matching Editor could be found
+     * @see jmri.jmrit.display.EditorManager#getEditor(String)
      */
     public static Editor getEditor(String name) {
-        for (Editor e : Editor.getEditors()) {
-            if (e.getTitle().equals(name)) {
-                return e;
-            }
-        }
-        return null;
+        return InstanceManager.getDefault(EditorManager.class).getEditor(name);
     }
 
     // initialize logging
