@@ -3,9 +3,13 @@ package jmri.managers.configurexml;
 import java.util.List;
 import jmri.ConfigureManager;
 import jmri.InstanceManager;
+import jmri.Manager;
 import jmri.SignalHead;
 import jmri.SignalHeadManager;
+import jmri.configurexml.ConfigXmlManager;
+import jmri.configurexml.JmriConfigureXmlException;
 import jmri.configurexml.XmlAdapter;
+import jmri.jmrix.internal.InternalSystemConnectionMemo;
 import jmri.managers.AbstractSignalHeadManager;
 import org.jdom2.Element;
 import org.slf4j.Logger;
@@ -14,13 +18,13 @@ import org.slf4j.LoggerFactory;
 /**
  * Provides the abstract base and store functionality for configuring
  * SignalHeadManagers, working with AbstractSignalHeadManagers.
- * <P>
+ * <p>
  * Typically, a subclass will just implement the load(Element turnouts) class,
  * relying on implementation here to load the individual turnouts. Note that
  * these are stored explicitly, so the resolution mechanism doesn't need to see
  * *Xml classes for each specific SignalHead or AbstractSignalHead subclass at
  * store time.
- * <P>
+ * <p>
  * Based on AbstractTurnoutManagerConfigXML
  *
  * @author Bob Jacobsen Copyright: Copyright (c) 2003, 2008
@@ -32,7 +36,7 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
 
     /**
      * Default implementation for storing the contents of a SignalHeadManager.
-     * <P>
+     * <p>
      * Unlike most other managers, the individual SignalHead objects are stored
      * separately via the configuration system so they can have separate type
      * information.
@@ -41,6 +45,7 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
      * @return Element containing the complete info
      */
     @Override
+    @SuppressWarnings("deprecation") // needs careful unwinding for Set operations
     public Element store(Object o) {
         Element signalheads = new Element("signalheads");
         setStoreElementClass(signalheads);
@@ -63,13 +68,9 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
                 }
                 log.debug("system name is " + sname);
                 SignalHead sub = sm.getBySystemName(sname);
-                try {
-                    Element e = jmri.configurexml.ConfigXmlManager.elementFromObject(sub);
-                    if (e != null) {
-                        signalheads.addContent(e);
-                    }
-                } catch (Exception e) {
-                    log.error("Error storing signalhead: {}", e, e);
+                Element e = ConfigXmlManager.elementFromObject(sub);
+                if (e != null) {
+                    signalheads.addContent(e);
                 }
             }
         }
@@ -120,7 +121,7 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
      *                with the shared Element.
      */
     public void loadSignalHeads(Element shared, Element perNode) {
-        InstanceManager.getDefault(jmri.SignalHeadManager.class);
+        InstanceManager.getDefault(SignalHeadManager.class);
 
         // load the contents
         List<Element> items = shared.getChildren();
@@ -133,10 +134,12 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
             String adapterName = item.getAttribute("class").getValue();
             log.debug("load via " + adapterName);
             try {
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 // and do it
                 adapter.load(item, null);
-            } catch (Exception e) {
+            } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                        | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                        | JmriConfigureXmlException e) {
                 log.error("Exception while loading {}: {}", item.getName(), e, e);
             }
         }
@@ -148,29 +151,27 @@ public class AbstractSignalHeadManagerXml extends AbstractNamedBeanManagerConfig
      * absolute type.
      */
     protected void replaceSignalHeadManager() {
-        if (InstanceManager.getDefault(jmri.SignalHeadManager.class).getClass().getName()
+        if (InstanceManager.getDefault(SignalHeadManager.class).getClass().getName()
                 .equals(AbstractSignalHeadManager.class.getName())) {
             return;
         }
         // if old manager exists, remove it from configuration process
-        if (InstanceManager.getNullableDefault(jmri.SignalHeadManager.class) != null) {
-            InstanceManager.getDefault(jmri.ConfigureManager.class).deregister(
-                    InstanceManager.getDefault(jmri.SignalHeadManager.class));
-        }
+        InstanceManager.getOptionalDefault(SignalHeadManager.class).ifPresent((shm) -> {
+            InstanceManager.getDefault(ConfigureManager.class).deregister(shm);
+        });
 
         // register new one with InstanceManager
-        AbstractSignalHeadManager pManager = new AbstractSignalHeadManager();
+        AbstractSignalHeadManager pManager = new AbstractSignalHeadManager(InstanceManager.getDefault(InternalSystemConnectionMemo.class));
         InstanceManager.setDefault(SignalHeadManager.class, pManager);
         // register new one for configuration
-        ConfigureManager cm = InstanceManager.getNullableDefault(jmri.ConfigureManager.class);
-        if (cm != null) {
-            cm.registerConfig(pManager, jmri.Manager.SIGNALHEADS);
-        }
+        InstanceManager.getOptionalDefault(ConfigureManager.class).ifPresent((cm) -> {
+            cm.registerConfig(pManager, Manager.SIGNALHEADS);
+        });
     }
 
     @Override
     public int loadOrder() {
-        return InstanceManager.getDefault(jmri.SignalHeadManager.class).getXMLOrder();
+        return InstanceManager.getDefault(SignalHeadManager.class).getXMLOrder();
     }
 
     private final static Logger log = LoggerFactory.getLogger(AbstractSignalHeadManagerXml.class);
